wier/force-app/main/default/objects/Form__c/fields/The_invoicing_process_is_easy__c.field-meta.xml
<CustomField>
    <fullName>The_invoicing_process_is_easy__c</fullName>
    <label>The invoicing process is easy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly agree</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
            <value>
                <fullName>Strongly disagree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>