wier/force-app/main/default/objects/Form__c/fields/The_invoicing_process_is_easy_Score__c.field-meta.xml
<CustomField>
    <fullName>The_invoicing_process_is_easy_Score__c</fullName>
    <formula>CASE(TEXT(  The_invoicing_process_is_easy__c ), 
&apos;Strongly Agree&apos;,100, 
&apos;Agree&apos;,100, 
&apos;Neutral&apos;,0, 
&apos;Disagree&apos;,-100, 
&apos;Strongly Disagree&apos;,-100, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>The invoicing process is easy Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>