wier/force-app/main/default/objects/Form__c/fields/The_invoicing_process_is_easy_specify__c.field-meta.xml
<CustomField>
    <fullName>The_invoicing_process_is_easy_specify__c</fullName>
    <label>The invoicing process is easy specify</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>