wier/force-app/main/default/objects/Form__c/fields/Use_Weir_for_future_projects_Score__c.field-meta.xml
<CustomField>
    <fullName>Use_Weir_for_future_projects_Score__c</fullName>
    <formula>CASE(TEXT(  I_will_use_Weir_for_future_projects__c ), 
&apos;Yes&apos;,100, 
&apos;No&apos;,-100, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Use Weir for future projects Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>