wier/force-app/main/default/objects/Form__c/fields/Use_Weir_for_future_projects_specify__c.field-meta.xml
<CustomField>
    <fullName>Use_Weir_for_future_projects_specify__c</fullName>
    <label>Use Weir for future projects specify</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>