wier/force-app/main/default/objects/Form__c/fields/Weir_a_solutions_provider_score__c.field-meta.xml
<CustomField>
    <fullName>Weir_a_solutions_provider_score__c</fullName>
    <formula>CASE(TEXT( I_consider_Weir_a_solutions_provider__c ), 
&apos;Yes&apos;,100, 
&apos;No&apos;,-100, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weir a solutions provider score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>