wier/force-app/main/default/objects/Form__c/fields/Weir_a_solutions_provider_specify__c.field-meta.xml
<CustomField>
    <fullName>Weir_a_solutions_provider_specify__c</fullName>
    <label>Weir a solutions provider specify</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>