wier/force-app/main/default/objects/Form__c/fields/Weir_communicates_a_clear_project_plan__c.field-meta.xml
<CustomField>
    <fullName>Weir_communicates_a_clear_project_plan__c</fullName>
    <label>Weir communicates a clear project plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly agree</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
            <value>
                <fullName>Strongly disagree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>