wier/force-app/main/default/objects/Form__c/fields/Who_to_contact_if_I_have_challenges__c.field-meta.xml
<CustomField>
    <fullName>Who_to_contact_if_I_have_challenges__c</fullName>
    <label>Who to contact if I have challenges</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>