wier/force-app/main/default/objects/Form__c/fields/Who_to_contact_with_challenges_score__c.field-meta.xml
<CustomField>
    <fullName>Who_to_contact_with_challenges_score__c</fullName>
    <formula>CASE(TEXT(  Who_to_contact_if_I_have_challenges__c ), 
&apos;Yes&apos;,100, 
&apos;No&apos;,-100, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Who to contact with challenges score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>