wier/force-app/main/default/objects/Form__c/fields/Who_to_contact_with_challenges_specify__c.field-meta.xml
<CustomField>
    <fullName>Who_to_contact_with_challenges_specify__c</fullName>
    <label>Who to contact with challenges specify</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>