wier/force-app/main/default/objects/Form__c/recordTypes/CSS.recordType-meta.xml
<RecordType>
    <fullName>CSS</fullName>
    <active>true</active>
    <label>CSS</label>
</RecordType>